Stop squishing the contentRight widgets against the margin

--- a/nlw/share/skin/s3/css/screen.css
+++ b/nlw/share/skin/s3/css/screen.css
@@ -1065,6 +1065,7 @@ div.messageBox div.messageBoxBottomLeft em a {
 div#contentColumns div#contentRight	{
 	width: 25%;
 	float: right;
+        padding-right: 15px;
 }
 
 body#dashBoard div#contentColumns div#contentRight	{
